@@ -1,3 +1,9 @@
+10/1/2023 11:45a
+    Debugged Dijkstra's algorithm implementation
+
+9/25/2023 4:30p
+    Working on implementing Dijkstra's algorithm
+
 9/22/2023 7:30p
     Added proper project folder structures
     Automated Makefile
